# Hellqualizer

./: .travis.yml  CMakeLists.txt  README  README.md  demuxing_decoding.cpp  demuxing_decoding.h  demuxing_decoding_filtering.c  demuxing_decoding_filtering.cpp  generate_coefficients  main.cpp  processing.cpp  processing.h  rendering.cpp  rendering.h  ring_buffer.cpp  ring_buffer.h  threadclass.h
DEBIAN/: control
core/inc/: Hellqualizer.h  controler.h  demuxing_decoding.h  fir_fixed.h  fir_float.h  float_coeff.h  iir_float.h  processing.h  record.h  rendering.h  ring_buffer.h
core/src/: Hellqualizer.cpp  controler.cpp  demuxing_decoding.cpp  processing.cpp  record.cpp  rendering.cpp  rendering_alsa.cpp  rendering_ao.cpp  rendering_win32.cpp
gui/inc/: gui.h
gui/src/: gui.cpp
scripts/: generate_coefficients  plot_dumped_values
scripts/numpy/: generate_coeff.py
